--- a/resources/stage/web/creator_funds.html
+++ b/resources/stage/web/creator_funds.html
@@ -399,28 +399,14 @@
       <div class="modal-header">
         <h4 class="modal-title">Deposit</h4>
       </div>
-      <div class="modal-body">
-        <form id="depositForm" class="form-horizontal" role="form">
-          <div class="form-group form-group-lg">
-            <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
-            <div class="col-sm-10 input-group">
-              <span class="input-group-addon">$</span>
-              <input name="deposit" class="form-control" type="text" id="formGroupInputLarge" placeholder="Current funds"
-              data-bv-greaterthan="true"
-              data-bv-greaterthan-value=".01"
-              data-bv-greaterthan-message="Must be > .01"
-
-              >
-            </div>
-          </div>
-
-          <button id="placedepositBtn" type="submit" class="btn btn-primary">Place deposit</button>
-        </form>
-
-      </div>
-
+      <div id="deposit_div" class="modal-body">
+       <script id="deposit_template" type="x-tmpl-mustache">
+        <iframe src="https://coinbase.com/inline_payments/{{.}}" style="width: 500px; height: 160px; border: none; box-shadow: 0 1px 3px rgba(0,0,0,0.25); overflow: hidden;" scrolling="no" allowtransparency="true" frameborder="0"></iframe>
+      </script>
     </div>
+
   </div>
+</div>
 </div>
 
 <div id="askModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
