--- a/resources/stage/web/creator_overview.html
+++ b/resources/stage/web/creator_overview.html
@@ -687,7 +687,7 @@
          <div class="form-group form-group-lg">
 
            <label class="col-sm-2 control-label" for="formGroupInputLarge">Funds</label>
-           <div name="creatorsFunds" class="col-sm-10 form-control-static">
+           <div name="usersFunds" class="col-sm-10 form-control-static">
 
            </div>
          </div>
