--- a/resources/stage/web/creator_overview.html
+++ b/resources/stage/web/creator_overview.html
@@ -497,13 +497,15 @@
         <form id="bidForm" class="form-horizontal" role="form">
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Price</label>
-            <div class="col-sm-10">
+            <div class="col-sm-10 input-group">
+              <span id="bidSymbol" class="input-group-addon">$</span>    
               <input name="bid" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last price"
               data-bv-greaterthan="true"
               data-bv-greaterthan-value=".01"
               data-bv-greaterthan-message="Must be > .01"
 
               >
+              <span class="input-group-addon">per piece</span>
             </div>
           </div>
 
@@ -569,7 +571,7 @@
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Price</label>
             <div class="col-sm-10 input-group">
-              <span class="input-group-addon">$</span>
+              <span id="buySymbol" class="input-group-addon">$</span>
               <input readonly name="buy" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last price">
               <span class="input-group-addon">per piece</span>
             </div>
@@ -648,13 +650,15 @@
         <form id="askForm" class="form-horizontal" role="form">
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Price</label>
-            <div class="col-sm-10">
+            <div class="col-sm-10 input-group">
+              <span id="askSymbol" class="input-group-addon">$</span>             
               <input name="ask" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last price"
               data-bv-greaterthan="true"
               data-bv-greaterthan-value=".01"
               data-bv-greaterthan-message="Must be > .01"
 
               >
+              <span class="input-group-addon">per piece</span>
             </div>
           </div>
 
