Cleaning up rewards page

--- a/resources/stage/web/creator_rewards.html
+++ b/resources/stage/web/creator_rewards.html
@@ -197,7 +197,7 @@
   <div class="col-md-6">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Rewards per piece per year</h3>
+        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Rewards</h3>
       </div>
       <div id="rewards" class="panel-body" style="height: 276px;overflow:auto;">
         <script id="rewards_template" type="x-tmpl-mustache"> 
@@ -205,7 +205,7 @@
             <thead> 
               <tr>
                 <th>Time <i class="fa fa-sort"></i></th>
-                <th>Reward <i class="fa fa-sort"></th>
+                <th>Reward/piece/year <i class="fa fa-sort"></th>
               </tr>
             </thead>
 
