testing adding disqus

--- a/resources/stage/web/creator_overview.html
+++ b/resources/stage/web/creator_overview.html
@@ -899,9 +899,13 @@
 
   <!-- end of wrapper -->
 </div>
-
+   <div id="disqus_thread"></div>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
 </div>
+
+ 
+
 
 
 
