--- a/resources/stage/web/creator_overview.html
+++ b/resources/stage/web/creator_overview.html
@@ -902,7 +902,11 @@
       <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var creatorName = getParameterByName('creator');
+        
+            name = 'creator'.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+        var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
+        results = regex.exec(location.search);
+      var creatorName == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
         var disqus_shortname = 'bitpieces' + '_' + creatorName; // required: replace example with your forum shortname
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
