--- a/resources/stage/web/creator_overview.html
+++ b/resources/stage/web/creator_overview.html
@@ -903,12 +903,12 @@
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         
-            name = 'creator'.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
-        var regex = new RegExp("[\\?&]" + name + "=([^&#]*)");
-        results = regex.exec(location.search);
-      var creatorName = decodeURIComponent(results[1].replace(/\+/g, " "));
-        var disqus_shortname = 'bitpieces' + '_' + creatorName; // required: replace example with your forum shortname
-
+      //       name = 'creator'.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+      //   var regex = new RegExp("[\\?&]" + name + "=([^&#]*)");
+      //   results = regex.exec(location.search);
+      // var creatorName = decodeURIComponent(results[1].replace(/\+/g, " "));
+        // var disqus_shortname = 'bitpieces' + '_' + creatorName; 
+        var disqus_shortname = 'bitpieces';
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
