--- a/resources/stage/web/creator_overview.html
+++ b/resources/stage/web/creator_overview.html
@@ -277,6 +277,35 @@
   <div class="row">
     <button id="saveBtn" type="submit" class="btn btn-primary hide">Save</button>
   </div>
+
+  <div class="row">
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+  /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+  
+  name = 'creator'.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+  var regex = new RegExp("[\\?&]" + name + "=([^&#]*)");
+  results = regex.exec(location.search);
+  var creatorName = decodeURIComponent(results[1].replace(/\+/g, " "));
+
+
+    var disqus_shortname = 'bitpieces'; // Required - Replace example with your forum shortname
+    var disqus_identifier = creatorName;
+    var disqus_title = creatorName;
+    // var disqus_url = 'a unique URL for each page where Disqus is present';
+    console.log(disqus_shortname);
+        // var disqus_shortname = 'bitpieces';
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+      <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+  </div>
 </div>
 
 
@@ -899,37 +928,12 @@
 
   <!-- end of wrapper -->
 </div>
-      <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        
-            name = 'creator'.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
-        var regex = new RegExp("[\\?&]" + name + "=([^&#]*)");
-        results = regex.exec(location.search);
-      var creatorName = decodeURIComponent(results[1].replace(/\+/g, " "));
 
 
-    var disqus_shortname = 'bitpieces'; // Required - Replace example with your forum shortname
-    var disqus_identifier = creatorName;
-    var disqus_title = creatorName;
-    // var disqus_url = 'a unique URL for each page where Disqus is present';
-        console.log(disqus_shortname);
-        // var disqus_shortname = 'bitpieces';
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    
+    </div>
 
-</div>
 
- 
 
 
 
